gitops/components/guardrails/mcp-integration/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: showroom-mcp-nemo
spec:
  priority: 10
  workloadSelector:
    labels:
      gateway.networking.k8s.io/gateway-name: showroom-mcp
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          portNumber: 8080
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.wasm
      patch:
        operation: INSERT_AFTER
        value:
          name: envoy.filters.http.ext_proc.bbr
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
            failure_mode_allow: false
            message_timeout: 15s
            grpc_service:
              envoy_grpc:
                cluster_name: outbound|9004||showroom-mcp-ipp.ai-showroom.svc.cluster.local
            processing_mode:
              request_header_mode: SEND
              request_body_mode: BUFFERED
              request_trailer_mode: SKIP
              response_header_mode: SEND
              response_body_mode: FULL_DUPLEX_STREAMED
              response_trailer_mode: SKIP
